--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,7 @@
 @import "../components/Header/scss/header";
 @import "../components/Button/scss/button";
+@import "../components/Nav/scss/_nav";
+
 
 
 @font-face {
@@ -8,5 +10,8 @@
   font-style: normal;
   font-weight: 500;
   unicode-range: U+0-FF, U+131, U+152-153, U+2BB-2BC, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+.App{
+  width: 100%;
 }
 
