--- a/src/components/Button/scss/_button.scss
+++ b/src/components/Button/scss/_button.scss
@@ -5,12 +5,13 @@
   padding: 12px;
   min-width: 100px;
   position: relative;
-  top: -80px;
   margin-left: 100px;
   cursor: pointer;
-  transition-duration: 1s;
+  transition-duration: 0.25s;
   &:hover{
-  transition-duration: 1s;
-  opacity: 0.5;
+  transform: scale(1.025);
+  transition-duration: 0.25s;
+  box-shadow: 0 1rem 1rem rgba(22,28,45,.1),0 .5rem 1rem -.75rem rgba(22,28,45,.1);
+  
   }
 }
